test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/convert_ulong_to_void_ptr.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  unsigned
  long
  identifier(x)
  =
  const int(0)
  ;
  void
  *
  identifier(v)
  =
  identifier(x)
  ;
  }
